# chessviz

./: .gitignore  CMakeCache.txt  CMakeLists.txt  IMPLEMENTATION.md  Makefile  README.md  ai.cpp  ai.h  board.cpp  board.h  build.sh  chess  chess.c  game.cpp  game.h  main.cpp  memory.md  move.cpp  move.h  pieces.cpp  pieces.h  player.cpp  player.h
include/: ChessBoard.h  ChessGame.h  GameState.h  MoveValidator.h  Piece.h  Renderer.h  Types.h
src/: ChessBoard.cpp  ChessGame.cpp  GameState.cpp  MoveValidator.cpp  Piece.cpp  Renderer.cpp  main.cpp
src/chess/: board.cpp  board.h  game.cpp  game.h  move.h  piece.h  rules.cpp  rules.h
src/ui/: board_renderer.cpp  board_renderer.h  input_handler.cpp  input_handler.h  piece_renderer.cpp  piece_renderer.h  window.cpp  window.h
